force-app/main/default/objects/Consult_Hair_Restoration__c/fields/Hair_Restoration_consult__c.field-meta.xml
<CustomField>
    <fullName>Hair_Restoration_consult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hair Restoration consult</label>
    <referenceTo>Hair_Restoration_consult__c</referenceTo>
    <relationshipLabel>Consult Hair Restorations</relationshipLabel>
    <relationshipName>Consult_Hair_Restorations</relationshipName>
    <type>Lookup</type>
</CustomField>