force-app/main/default/objects/Consult_Hair_Restoration__c/fields/HPI_Date__c.field-meta.xml
<CustomField>
    <fullName>HPI_Date__c</fullName>
    <label>HPI Date</label>
    <type>Date</type>
</CustomField>